--- a/views/layouts/base.html
+++ b/views/layouts/base.html
@@ -57,9 +57,6 @@
     <script src='//cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.13/moment-timezone-with-data-2012-2022.min.js'></script>
     <script src='//cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.7.14/js/bootstrap-datetimepicker.min.js'></script>
 
-    {{/*<!-- FormValidation -->*/}}
-    <script src="/javascript/formValidation.min.js"></script>
-    <script src="/javascript/formValidation-bootstrap.min.js"></script>
 
     {{/*<!-- Bootstrap Multiselect -->*/}}
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.13/css/bootstrap-multiselect.css">
@@ -75,10 +72,10 @@
     
     
     {{/*<!-- FormValidation -->*/}}
-    <link rel="stylesheet" href="/stylesheets/formValidation.min.css">
-    <script src="//cdnjs.cloudflare.com/ajax/libs/es6-shim/0.35.3/es6-shim.min.js"></script>
-    <script defer src="/javascript/FormValidation.min.js"></script>
-    <script defer src="/javascript/Bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/vendors/formvalidation/dist/css/formValidation.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-shim/0.35.3/es6-shim.min.js"></script>
+    <script src="/vendors/formvalidation/dist/js/FormValidation.min.js"></script>
+    <script src="/vendors/formvalidation/dist/js/plugins/Bootstrap.min.js"></script>
 
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.6/fastclick.min.js"></script>
