--- a/views/AppController/check_availability.html
+++ b/views/AppController/check_availability.html
@@ -56,34 +56,30 @@
     </div>
     <div class="row">
         <div class="col">
+            <form id="check-availability-form" action="/check_availability" method="post">
+
+            {{ .CSRFTemplateField}}
+
+                <div class="form-group">
+                    <input id="postal-code" autocomplete="false" class="form-control" name="postal_code" type="text" placeholder="{{ t .CurrentLocale "zip_code" "" }}" value="{{ .ViewData.PostalCode }}">
+                </div>
+                <div class="form-group row">
+                    <div class="col">
+                        <table style="width: 100%;" class="list-table">
+                            <tr>
+                                <td style="width: 50%;">
+                                    <a href="/account" class="btn btn-default btn-block no-right-radius">{{ t .CurrentLocale "cancel" "" }}</a>
+                                </td>
+                                <td style="width: 50%;">
+                                    <button id="check-availability-button" type="submit" class="btn btn-safe-stop btn-block no-left-radius">{{ t .CurrentLocale "submit" "" }}</button>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+            </form>
         </div>
     </div>
-
-
-    <form id="check-availability-form">
-
-
-        <div class="form-group">
-            <input id="postal_code" type="text" class="form-control" name="postal_code" />
-        </div>
-
-
-    {{/*<div class="form-group">*/}}
-    {{/*<input id="postal-code" autocomplete="false" class="form-control" name="postal_code" type="text" placeholder="{{ t .CurrentLocale "zip_code" "" }}" value="{{ .ViewData.PostalCode }}">*/}}
-    {{/*</div>*/}}
-        <div class="form-group row">
-            <table style="width: 100%;" class="list-table">
-                <tr>
-                    <td style="width: 50%;">
-                        <a href="/account" class="btn btn-default btn-block no-right-radius">{{ t .CurrentLocale "cancel" "" }}</a>
-                    </td>
-                    <td style="width: 50%;">
-                        <button id="check-availability-button" type="submit" class="btn btn-safe-stop btn-block no-left-radius">{{ t .CurrentLocale "submit" "" }}</button>
-                    </td>
-                </tr>
-            </table>
-        </div>
-    </form>
 
 
     <div class="row">
@@ -94,6 +90,7 @@
         </div>
     </div>
 </div>
+
 
 <script>
 
@@ -107,64 +104,37 @@
 
 $(document).ready(function () {
 
-    FormValidation.formValidation(document.getElementById("check-availability-form"),
-            {
-                plugins: {
-                    trigger: new FormValidation.plugins.Trigger(),
-                    submitButton: new FormValidation.plugins.SubmitButton(),
-                    defaultSubmit: new FormValidation.plugins.DefaultSubmit(),
-                    bootstrap: new FormValidation.plugins.Bootstrap(),
-                    icon: new FormValidation.plugins.Icon({
-                        valid: 'fa fa-check',
-                        invalid: 'fa fa-times',
-                        validating: 'fa fa-refresh',
-                    }),
-                },
-                fields: {
-                    'postal_code': {
-                        validators: {
-                            notEmpty: {message: '{{ t .CurrentLocale "required" "" }}'},
-                            zipCode: {country: '{{ .ViewData.Country }}', message: "{{ t .CurrentLocale "invalid_zip_code" "" }}"}
-                        }
+    {{if or (eq .Domain "safestopapp.com") (eq .Domain "ssc.local") }}
+        var country_code = 'US';
+    {{else }}
+        var country_code = "CA";
+    {{end}}
+
+    FormValidation.formValidation(
+        document.getElementById("check-availability-form"),
+        {
+            fields: {
+                'postal_code': {
+                    validators: {
+                        notEmpty: {message: '{{ t .CurrentLocale "required" "" }}'},
+                        zipCode: {country: country_code, message: "{{ t .CurrentLocale "invalid_zip_code" "" }}"}
                     }
                 }
+            },
+            plugins: {
+                trigger: new FormValidation.plugins.Trigger(),
+                submitButton: new FormValidation.plugins.SubmitButton(),
+                defaultSubmit: new FormValidation.plugins.DefaultSubmit(),
+                bootstrap: new FormValidation.plugins.Bootstrap(),
+                icon: new FormValidation.plugins.Icon({
+                    valid: 'fa fa-check',
+                    invalid: 'fa fa-times',
+                    validating: 'fa fa-refresh',
+                }),
             }
+        }
     )
 
-    {{/*$('#check-availability-form').formValidation({*/}}
-        {{/*framework: 'bootstrap',*/}}
-        {{/*feedbackIcons: {*/}}
-            {{/*valid: 'glyphicon glyphicon-ok',*/}}
-            {{/*invalid: 'glyphicon glyphicon-remove',*/}}
-            {{/*validating: 'glyphicon glyphicon-refresh'*/}}
-        {{/*},*/}}
-        {{/*fields: {*/}}
-            {{/*'postal_code': {*/}}
-                {{/*validators: {*/}}
-                    {{/*notEmpty: {message: '{{ t .CurrentLocale "required" "" }}'},*/}}
-                    {{/*zipCode: {country: '{{ .ViewData.Country }}', message: "{{ t .CurrentLocale "invalid_zip_code" "" }}"}*/}}
-                {{/*}*/}}
-            {{/*}*/}}
-        {{/*}*/}}
-    {{/*})*/}}
-
-    $("#check-availability-button").click(function (e) {
-        e.preventDefault();
-        $("#check-availability-results").empty();
-        $("#check-availability-button").prop('disabled', true);
-
-        // $('#check-availability-form').data('formValidation').validate();
-        // if ($('#check-availability-form').data('formValidation').isValid()) {
-
-            safe_stop_get("/check_availability",
-                    {
-                        format: "json",
-                        postal_code: $("#postal-code").val()
-                    },
-                    check_availability_success,
-                    check_availability_fail);
-        // }
-    });
 
     if($("#postal-code").val() && $("#postal-code").val().length > 0){
         $("#check-availability-button").trigger('click');
@@ -172,31 +142,7 @@ $(document).ready(function () {
 
 });
 
-function check_availability_success(response){
-    $("#check-availability-button").prop('disabled', false);
-    if(response.jurisdictions && response.jurisdictions.length > 0){
-        $("#check-availability-results").append(Mustache.render(result_template, response));
-    }
-    else{
-        $("#check-availability-results").append(Mustache.render(cant_find_my_school_template, response));
-    }
-}
-
-function check_availability_fail(response){
-    $("#check-availability-button").prop('disabled', false);
-}
-
-
 </script>
-
-
-
-
-
-
-
-
-
 
 
 
